--- a/ClientApp/src/app/shared/sidebar/sidebar.component.html
+++ b/ClientApp/src/app/shared/sidebar/sidebar.component.html
@@ -98,14 +98,14 @@
                     Inward Accessories</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" (click)="deviceSidemenuCollapse()" routerLink="/inward-material/bill-generation"
-                    routerLinkActive="active" #billGeneration="routerLinkActive"><i class="fas fa-circle"></i>
-                    Bill Generation</a>
+                  <a class="nav-link" (click)="deviceSidemenuCollapse()" routerLink="/inward-material/billing-list"
+                    routerLinkActive="active" #billingList="routerLinkActive"><i class="fas fa-circle"></i>
+                    Billing List</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" (click)="deviceSidemenuCollapse()" routerLink="/inward-material/outward"
-                    routerLinkActive="active" #outward="routerLinkActive"><i class="fas fa-circle"></i>
-                    Outward</a>
+                  <a class="nav-link" (click)="deviceSidemenuCollapse()" routerLink="/inward-material/outward-list"
+                    routerLinkActive="active" #outwardList="routerLinkActive"><i class="fas fa-circle"></i>
+                    Outward List</a>
                 </li>
               </ul>
             </div>
