--- a/ClientApp/src/app/modules/inward-material/inward-print/inward-print.component.html
+++ b/ClientApp/src/app/modules/inward-material/inward-print/inward-print.component.html
@@ -14,13 +14,13 @@
            font-family:Arial, Helvetica, sans-serif !important;
            font-family: 'Poppins', sans-serif !important;
            padding: 0 !important;
-        }  
+        }
       }
   </style>
 </head>
 <body style="padding: 0 0px;page-break-after:always; background: #fff; font-family: 'Poppins', sans-serif !important;">
     <!--customer-copy-start-->
-    
+
   <div class="clearfix" style="padding: 0px 0;
   margin-bottom: 10px;
   border: 0px solid #ccc;
@@ -390,5 +390,5 @@
 </body>
 </html>
 <div style="text-align: center; padding-bottom: 15px;">
-<button printSectionId="print-section" ngxPrint class="btn btn-primary btn-sm">print</button>
+<button printSectionId="print-section"  (click)="printInward()" class="btn btn-primary btn-sm">print</button>
 </div>
