--- a/ClientApp/src/app/modules/inward-material/billing-list/billing-list.component.html
+++ b/ClientApp/src/app/modules/inward-material/billing-list/billing-list.component.html
@@ -1,121 +1,68 @@
 
 
 <div class="container-fluid">
-    <div class="card mb-4 list-card">
-        <div class="card-header">
-            <h4 class="float-left">Billing List</h4>
-                <a href="javascript:void(0)" routerLink="/inward-material/bill-generation" class="btn  btn-primary float-right">Add Bill</a>
-        </div>
-        <div class="card-body">
-            <!--table listing statrt hover-->
-            <div id="no-more-tables">
-                <!-- This id used for responsive table -->
-  
-                <table class="table row-border hover">
-                    <thead>
-                      <tr>
-                        <th style="width: 20%;">Bill Date</th>
-                        <th style="width: 25%;">Job Number</th>
-                        <th style="width: 20%;">Engg Name</th>
-                        <th style="width: 15%;">Service Amount</th>
-                        <th style="width: 20%;" class="text-center actions-td cursor">Action</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                          <td data-title="Bill Date">10-10-2020</td>
-                          <td data-title="Job Number">1234567</td>
-                          <td data-title="Engg Name">Nitin Patil</td>
-                          <td data-title="Service Amount">5000/-</td>
-                          <td data-title="Actions" class="action text-center actions-td">
-                            <div class="d-flex justify-content-center">
-                              <a href="javascript:void(0)">
-                                <i class="far fa-edit orange" placement="top"
-                                   ngbTooltip="Edit"></i>
-                              </a>
-                              <a href="javascript:void(0)">
-                                <i class="fas fa-print orange" placement="top"
-                                   ngbTooltip="Inward Print"></i>
-                              </a>
-                              <a href="javascript:void(0)">
-                                <i class="far fa-trash-alt orange" placement="top"
-                                   ngbTooltip="Delete"></i>
-                              </a>
-                            </div>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td data-title="Bill Date">10-10-2020</td>
-                        <td data-title="Job Number">1234567</td>
-                        <td data-title="Engg Name">Nitin Patil</td>
-                        <td data-title="Service Amount">5000/-</td>
-                        <td data-title="Actions" class="action text-center actions-td">
-                          <div class="d-flex justify-content-center">
-                            <a href="javascript:void(0)">
-                              <i class="far fa-edit orange" placement="top"
-                                 ngbTooltip="Edit"></i>
-                            </a>
-                            <a href="javascript:void(0)">
-                              <i class="fas fa-print orange" placement="top"
-                                 ngbTooltip="Inward Print"></i>
-                            </a>
-                            <a href="javascript:void(0)">
-                              <i class="far fa-trash-alt orange" placement="top"
-                                 ngbTooltip="Delete"></i>
-                            </a>
-                          </div>
-                      </td>
-                    </tr>
-                    <tr>
-                        <td data-title="Bill Date">10-10-2020</td>
-                        <td data-title="Job Number">1234567</td>
-                        <td data-title="Engg Name">Nitin Patil</td>
-                        <td data-title="Service Amount">5000/-</td>
-                        <td data-title="Actions" class="action text-center actions-td">
-                          <div class="d-flex justify-content-center">
-                            <a href="javascript:void(0)">
-                              <i class="far fa-edit orange" placement="top"
-                                 ngbTooltip="Edit"></i>
-                            </a>
-                            <a href="javascript:void(0)">
-                              <i class="fas fa-print orange" placement="top"
-                                 ngbTooltip="Inward Print"></i>
-                            </a>
-                            <a href="javascript:void(0)">
-                              <i class="far fa-trash-alt orange" placement="top"
-                                 ngbTooltip="Delete"></i>
-                            </a>
-                          </div>
-                      </td>
-                    </tr>
-                    <tr>
-                        <td data-title="Bill Date">10-10-2020</td>
-                        <td data-title="Job Number">1234567</td>
-                        <td data-title="Engg Name">Nitin Patil</td>
-                        <td data-title="Service Amount">5000/-</td>
-                        <td data-title="Actions" class="action text-center actions-td">
-                          <div class="d-flex justify-content-center">
-                            <a href="javascript:void(0)">
-                              <i class="far fa-edit orange" placement="top"
-                                 ngbTooltip="Edit"></i>
-                            </a>
-                            <a href="javascript:void(0)">
-                              <i class="fas fa-print orange" placement="top"
-                                 ngbTooltip="Inward Print"></i>
-                            </a>
-                            <a href="javascript:void(0)">
-                              <i class="far fa-trash-alt orange" placement="top"
-                                 ngbTooltip="Delete"></i>
-                            </a>
-                          </div>
-                      </td>
-                    </tr>
-                    </tbody>
-                  </table>
-                <!--table listing end-->
-            </div>
-        </div>
+  <div class="card mb-4 list-card">
+    <div class="card-header">
+      <h4 class="float-left">Billing List</h4>
+      <a href="javascript:void(0)" (click)="addBillPopup(null)" class="btn  btn-primary float-right">Add Bill</a>
+    </div>
+    <div class="card-body">
+      <!--table listing statrt hover-->
+      <div id="no-more-tables">
+        <!-- This id used for responsive table -->
+        <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table row-border hover">
+          <thead>
+            <tr>
+              <th style="width: 10%;">Bill No</th>
+              <th style="width: 10%;">Bill Date</th>
+              <th style="width: 30%;">Job Number</th>
+              <th style="width: 20%;">Customer Name</th>
+              <th style="width: 10%;">Service Amt</th>
+              <th style="width: 20%;" class="text-center actions-td cursor">Action</th>
+            </tr>
+          </thead>
+          <tbody *ngIf="bills?.length != 0">
+            <tr *ngFor="let _bill of bills">
+              <td data-title="Bill No">{{ _bill.billId }}</td>
+              <td data-title="Bill Date">{{ _bill.billDate | date:'dd/MM/yyyy'}}</td>
+              <td data-title="Job Number">{{ _bill.jobNumbers }}</td>
+              <td data-title="Customer Name">{{ _bill.companyName }}</td>
+              <td data-title="Service Amount">{{ _bill.serviceAmount }}/-</td>
+              <td data-title="Actions" class="action text-center actions-td">
+                <div class="d-flex justify-content-center">
+                  <a href="javascript:void(0)">
+                    <i class="far fa-edit orange" placement="top"
+                       ngbTooltip="View/Edit" (click)="addBillPopup(_bill)"></i>
+                  </a>
+                  <a href="javascript:void(0)">
+                    <i class="far fa-trash-alt orange" placement="top"
+                       ngbTooltip="Delete" (click)="openDelete(content,_bill)"></i>
+                  </a>
+                </div>
+              </td>
+            </tr>
+            <tr *ngIf="bills?.length == 0">
+              <td colspan="12" class="no-data-available">No Records Found!</td>
+            </tr>
+          </tbody>
+        </table>
+        <!--table listing end-->
+      </div>
     </div>
   </div>
-  
-  
+</div>
+
+
+
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title"><i class="icon-select"></i> Confirm</h4>
+  </div>
+  <div class="modal-body">
+    <p class="text-center">Are you sure, you want to delete?</p>
+  </div>
+  <div class="modal-footer no-top-border">
+    <button type="button" class="btn btn-primary" (click)="modal.close(true)">OK</button>
+    <button type="button" class="btn btn-secondary" (click)="modal.close(false)">Cancel</button>
+  </div>
+</ng-template>
