--- a/ClientApp/src/app/modules/inward-material/outward/outward.component.html
+++ b/ClientApp/src/app/modules/inward-material/outward/outward.component.html
@@ -171,7 +171,7 @@
            
         </div>
         <footer>
-            <button class="btn btn-secondary">Cancel</button>
+          <!--<button class="btn btn-secondary" (click)="close()">Cancel</button>-->
             <button type="submit" class="btn btn-primary">
                 Save
             </button>
