--- a/ClientApp/src/app/modules/inward-material/bill-generation/bill-generation.component.html
+++ b/ClientApp/src/app/modules/inward-material/bill-generation/bill-generation.component.html
@@ -314,7 +314,7 @@
 
     </div>
     <footer>
-      <button class="btn btn-secondary">Cancel</button>
+      <button class="btn btn-secondary" (click)="close()">Cancel</button>
       <button type="submit" class="btn btn-primary" (click)="billGenerationForm.valid && validateForm() && saveBill()">
         Save
       </button>
