--- a/ClientApp/src/app/modules/inward-material/inward-print/inward-print.component.html
+++ b/ClientApp/src/app/modules/inward-material/inward-print/inward-print.component.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en"  id="print-section">
 <head>
   <meta charset="utf-8">
@@ -390,5 +390,6 @@
 </body>
 </html>
 <div style="text-align: center; padding-bottom: 15px;">
-<button printSectionId="print-section"  (click)="printInward()" class="btn btn-primary btn-sm">print</button>
+  <button printSectionId="print-section" (click)="printInward()" class="btn btn-primary btn-sm">print</button>
+  <button class="btn btn-secondary" (click)="close()">Cancel</button>
 </div>
