--- a/ClientApp/src/app/modules/inward-material/inward/inward.component.html
+++ b/ClientApp/src/app/modules/inward-material/inward/inward.component.html
@@ -18,12 +18,11 @@
               <thead>
                 <tr>
 
-                  <th style="width: 15%;">Job No#</th>
-                  <th style="width: 20%;">Customer Name</th>
-                  <th style="width: 15%;">Engg Name</th>
-                  <th style="width: 10%;">Inward Date</th>
-                  <th style="width: 10%;">Delivery Date</th>
-                  <th style="width: 10%;">Outward Bill Status</th>
+                  <th style="width: 10%;">Job No#</th>
+                  <th style="width: 15%;">Company Name</th>
+                  <th style="width: 15%;">Is Repaired</th>
+                  <th style="width: 20%;">Delivery Date</th>
+                  <th style="width: 20%;">Bill/Outward Status</th>
                   <th style="width: 20%;" class="text-center actions-td cursor">Action</th>
                 </tr>
               </thead>
@@ -32,10 +31,9 @@
 
                     <td data-title="Job No">{{ inward.inwardId }}</td>
                     <td data-title="Customer Name">{{ inward.clientName }}</td>
-                    <td data-title="Engg Name">{{ inward.enggName }}</td>
-                    <td data-title="Inward Date">{{ inward.inwardDate | date: 'dd/MM/yyyy'}}</td>
+                    <td data-title="Customer Name">{{ inward.isRepaired==1?'Repaired':'Not Repaired' }}</td>
                     <td data-title="Delivery Date">{{ inward.deliveryDate | date: 'dd/MM/yyyy' }}</td>
-                    <td data-title="Outward Bill Status">{{ getInwardOutwardBillStatusById(inward.outwardBillStatus) }}</td>
+                    <td data-title="Bill/Outward Status">{{ getInwardOutwardBillStatusById(inward.outwardBillStatus) }}</td>
                     <td data-title="Actions" class="action text-center actions-td">
                       <div class="d-flex justify-content-center">
                         <a href="javascript:void(0)">
